--- a/intex.html
+++ b/intex.html
@@ -235,42 +235,77 @@
     </div>
   </section>
 
-  <section class="certificates" id="certificates">
-    <div class="container">
-      <header class="section-header">
-        <h2>Certificates</h2>
-      </header>
-      <div class="certificates__grid">
-        <article class="certificate-card">
-          <div class="certificate-card__icon">
-            <i class="fas fa-certificate"></i>
-          </div>
-          <h3>Software Development Life Cycle</h3>
-          <p class="certificate-card__issuer">ACCENT TECHNO SOFT</p>
-        </article>
-        <article class="certificate-card">
-          <div class="certificate-card__icon">
-            <i class="fas fa-cloud"></i>
-          </div>
-          <h3>Cloud Computing Using AWS</h3>
-          <p class="certificate-card__issuer">RECCSAR • July 2023</p>
-        </article>
-        <article class="certificate-card">
-          <div class="certificate-card__icon">
-            <i class="fas fa-brain"></i>
-          </div>
-          <h3>AI Data Science</h3>
-          <p class="certificate-card__issuer">GALVIN TECHNOLOGY • Oct 2023</p>
-        </article>
-        <article class="certificate-card">
-          <div class="certificate-card__icon">
-            <i class="fas fa-briefcase"></i>
-          </div>
-          <h3>Software Engineering Job Simulation</h3>
-          <p class="certificate-card__issuer">J.P. Morgan • Jul 2025</p>
-        </article>
-      </div>
+  <div class="certificates__grid">
+
+ 
+ 
+
+
+  <article class="certificate-card">
+    <div class="certificate-card__icon">
+      <i class="fas fa-briefcase"></i>
     </div>
+    <h3>Software Engineering Job Simulation</h3>
+    <p class="certificate-card__issuer">J.P. Morgan (Forage) • Jul 2025</p>
+    <a
+      href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Sj7temL583QAYpHXD/E6McHJDKsQYh79moz_Sj7temL583QAYpHXD_T25Pbxv9EHo5iiDQk_1753343686643_completion_certificate.pdf"
+      target="_blank"
+      rel="noopener noreferrer"
+      class="certificate-link">
+      View Certificate
+    </a>
+  </article>
+
+  <article class="certificate-card">
+    <div class="certificate-card__icon">
+      <i class="fas fa-briefcase"></i>
+    </div>
+    <h3>Forward Program</h3>
+    <p class="certificate-card__issuer">McKinsey</p>
+    <a
+      href="https://www.credly.com/badges/9e8e1abd-9cf8-489e-9de6-b53974be4c45/public_url"
+      target="_blank"
+      rel="noopener noreferrer"
+      class="certificate-link">
+      View Certificate
+    </a>
+  </article>
+
+  <article class="certificate-card">
+  <div class="certificate-card__icon">
+    <i class="fas fa-laptop-code"></i>
+  </div>
+  <h3>Technology Job Simulation</h3>
+  <p class="certificate-card__issuer">Deloitte Australia (Forage) • Jul 2025</p>
+  <a
+    href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/9PBTqmSxAf6zZTseP/udmxiyHeqYQLkTPvf_9PBTqmSxAf6zZTseP_T25Pbxv9EHo5iiDQk_1752820570997_completion_certificate.pdf"
+    target="_blank"
+    rel="noopener noreferrer"
+    class="certificate-link">
+    View Certificate
+  </a>
+</article>
+
+ <article class="certificate-card">
+    <div class="certificate-card__icon">
+      <i class="fas fa-certificate"></i>
+    </div>
+    <h3>Software Development Life Cycle</h3>
+    <p class="certificate-card__issuer">ACCENT TECHNO SOFT</p>
+  </article>
+
+
+  <article class="certificate-card">
+    <div class="certificate-card__icon">
+      <i class="fas fa-brain"></i>
+    </div>
+    <h3>AI Data Science</h3>
+    <p class="certificate-card__issuer">GALVIN TECHNOLOGY • Oct 2023</p>
+  </article>
+
+
+</div>
+
   </section>
 
   <section class="contact" id="contact">
